# marsupial

./: .gitignore  README.md  platformio.ini
.github/workflows/: design.yml  documentation.yml
firmware/: .mxproject  CMakeLists.txt  STM32G071C8Ux_FLASH.ld  STM32G071RBTx_FLASH.ld  firmware.ioc
firmware/Core/Inc/: main.h  stm32g0xx_hal_conf.h  stm32g0xx_it.h
firmware/Core/Src/: adc.c  dma.c  gpio.c  main.c  stm32g0xx_it.c  tim.c
firmware/Middlewares/ST/STM32_USBPD_Library/Devices/STM32G0XX/inc/: usbpd_cad_hw_if.h  usbpd_hw.h  usbpd_hw_if.h
firmware/Middlewares/ST/STM32_USBPD_Library/Devices/STM32G0XX/src/: usbpd_cad_hw_if.c  usbpd_hw_if_it.c  usbpd_phy.c  usbpd_phy_hw_if.c
firmware/USBPD/App/: usbpd.c  usbpd.h  usbpd_dpm_core.c  usbpd_pdo_defs.h  usbpd_pwr_if.c  usbpd_pwr_if.h
firmware/cmake/: gcc-arm-none-eabi.cmake
firmware/cmake/stm32cubemx/: CMakeLists.txt
firmware/cubemx/: CubeMX.ioc  Makefile
firmware/cubemx/Core/Inc/: stm32g0xx_hal_conf.h  stm32g0xx_it.h  ucpd.h
firmware/cubemx/Core/Src/: adc.c  gpio.c  stm32g0xx_hal_msp.c  ucpd.c
firmware/cubemx/Middlewares/ST/STM32_USBPD_Library/Devices/STM32G0XX/inc/: usbpd_phy.h  usbpd_timersserver.h
firmware/cubemx/Middlewares/ST/STM32_USBPD_Library/Devices/STM32G0XX/src/: usbpd_hw.c  usbpd_pwr_hw_if.c  usbpd_timersserver.c
firmware/cubemx/USBPD/App/: usbpd_os_port.h  usbpd_pwr_if.c
firmware/include/: README
firmware/lib/: README
firmware/test/: README
hardware/: USB.kicad_sch  dcdcpdo.kicad_sch  fp-info-cache  marsupial-job.gbrjob  marsupial.kicad_pcb  marsupial.kicad_prl  marsupial.kicad_pro  marsupial.kicad_sch  stm32g0.kicad_sch  usbhub.kicad_sch  usbpd_src.kicad_sch  vbusctrl.kicad_sch
mechanical/: EXT-9162.STEP  EXT-9163.STEP  assembly.FCStd  assembly.FCStd1  marsupial-backplate.dxf  marsupial-frontplate.dxf
mechanical/backplate/: backplate.kicad_pcb  backplate.kicad_prl  backplate.kicad_pro
mechanical/backplate/gerbers/: backplate-B_Cu.gbr  backplate-B_Mask.gbr  backplate-B_Silkscreen.gbr  backplate-Edge_Cuts.gbr  backplate-F_Cu.gbr  backplate-F_Mask.gbr  backplate-F_Silkscreen.gbr  backplate-NPTH-drl_map.gbr  backplate-NPTH.drl  backplate-PTH.drl  backplate-job.gbrjob
mechanical/frontplate/: fp-info-cache  frontplate.kicad_pcb  frontplate.kicad_prl  frontplate.kicad_pro
mechanical/frontplate/gerbers/: frontplate-B_Cu.gbr  frontplate-B_Mask.gbr  frontplate-B_Silkscreen.gbr  frontplate-Edge_Cuts.gbr  frontplate-F_Cu.gbr  frontplate-F_Mask.gbr  frontplate-F_Silkscreen.gbr  frontplate-NPTH-drl_map.gbr  frontplate-NPTH.drl  frontplate-PTH.drl  frontplate-job.gbrjob
